[package]
name = "hard-link-dedup"
version = "0.1.0"
authors = ["Marcus Ofenhed"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["filesystem", "command-line-utilities"]
description = "A tool to save space by replacing duplicate files with hard links on NTFS."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "io-util", "io-std", "fs", "sync", "macros"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
async-trait = "^0.1.59"

[target.'cfg(windows)'.dependencies]
windows = { version = "^0.42", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
